# matrix_multiplication

./: .gitignore  3_3.cpp  CMakeLists.txt  README.md  a.out  conv_bin_txt.cpp  genmat.cpp  matgen.cpp  mpi_mul  sample-script  sequential_strassen.cpp  simpleIKJ.cpp  straseen_mpi1.cpp  straseen_mpi_temp.cpp  straseen_mpi_threads.cpp  strassenRec.cu  strassen_mpi.cpp  strassen_mpi_2thread.cpp  strassen_mpi_without_thread.cpp  test_correct.pp
include/: laderman.hpp  matrix_io.hpp  runner.hpp  runner_mpi.hpp  strassen.hpp  strassen_mpi.hpp
src/: 3_3.cpp  simpleIKJ.cpp  strassen_common.h  strassen_mpi.cpp  strassen_mpi_2thread.cpp  strassen_mpi_without_thread.cpp
src/core/: laderman.cpp  strassen.cpp
src/cuda/: laderman.cu  strassen.cu
src/laderman/: block.cpp  sequential.cpp
src/mpi/: laderman.cpp  laderman_2thread.cpp  laderman_timed.cpp  strassen.cpp  strassen_2thread.cpp
src/mpi/distributed/: strassen.cpp  strassen_2thread.cpp  strassen_timed.cpp
src/strassen/: sequential.cpp
tests/: conv_bin_txt.cpp  test_correct.pp
